<resources>
    <string name="app_name">My First App</string>
    <string name="question1">Who wrote The Alchemist?</string>
    <string name="answer1">John Steinbeck</string>
    <string name="answer2">Dany Laferriere</string>
    <string name="answer3">Paolo Coelho</string>
    <string name="answer4">Michel Houellebeck</string>

    <string name="question2">When did France win the World cup (check all that apply)</string>
    <string name="answer5">1950</string>
    <string name="answer6">1998</string>
    <string name="answer7">2006</string>
    <string name="answer8">2018</string>

    <string name="submit">Submit</string>
    <string name="imgValidation">Green Y Check or Red X Cross</string>


</resources>